feat(collection): PictogramMap支持通过get/set生成或者导入model